--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -7,7 +7,10 @@
             "command": "make",
             "problemMatcher": [
                 "$gcc"
-            ]
+            ],
+            "presentation": {
+                "clear": true
+            }
         },
         {
             "label": "Build and Launch Flycast",
@@ -16,6 +19,9 @@
             "problemMatcher": [
                 "$gcc"
             ],
+            "presentation": {
+                "clear": true
+            },
             "command": "make && flycast ${workspaceFolder}/bbox.elf"
         }
     ]
