--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,7 +11,8 @@
         "array": "c",
         "string_view": "c",
         "initializer_list": "c",
-        "*.m": "c"
+        "*.m": "c",
+        "vmufs.h": "c"
     },
     "C_Cpp.errorSquiggles": "disabled"
 }
