--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -28,7 +28,23 @@
         "adx.h": "c",
         "snddrv.h": "c",
         "stream.h": "c",
-        "vmu_fb.h": "c"
+        "vmu_fb.h": "c",
+        "stdio.h": "c",
+        "bit": "cpp",
+        "cctype": "cpp",
+        "cmath": "cpp",
+        "compare": "cpp",
+        "concepts": "cpp",
+        "cstdarg": "cpp",
+        "cstdio": "cpp",
+        "cstdlib": "cpp",
+        "type_traits": "cpp",
+        "limits": "cpp",
+        "new": "cpp",
+        "*.tcc": "cpp",
+        "cinttypes": "cpp",
+        "cstdint": "cpp",
+        "typeinfo": "cpp"
     },
     "C_Cpp.errorSquiggles": "enabled"
 }
