--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,6 @@
 *.o
 romdisk.*
-build/*
 *.elf
 output.bin
-.vscode/settings.json
-.vscode/browse.vc.db
-.vscode/settings.json
-.vscode/settings.json
+build/*
+.vscode/*
